tests/deploy_errors/flow_not_found/error.txt
Error: 
    1 | deploy flow broken from snot::badger
      |             ^^^^^^ Artefact used in `from` is not defined or not found: snot::badger